etc/tests/error/type/decl-string-to-int.ny
;; expect: cannot assign string literal to int
use std.core

def int: x = "hi"
print(x)
